fix scrollbars and number axis selector mobile styles

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -153,11 +153,14 @@
 
       .query-suggestion-text {
         display: flex;
-        align-items: center;
         flex-wrap: nowrap;
+        align-items: flex-start;
+        white-space: normal;
 
         .react-autoql-icon {
           margin-right: 5px;
+          margin-top: 4px;
+
           svg {
             stroke-width: 1px;
             stroke: currentColor;
