--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -143,8 +143,8 @@
     font-size: 18px;
     letter-spacing: 0.05em;
   }
-  .react-autoql-drawer .drawer-content-wrapper{
-	transition: unset !important;
+  .react-autoql-drawer .drawer-content-wrapper {
+    transition: unset !important;
   }
 }
 @media (min-width: 480px) {
@@ -406,6 +406,20 @@
   z-index: 99999 !important; /* necessary to show up on top of rc drawer */
 }
 
+.react-tiny-popover-container.react-autoql-popover-mobile {
+  top: 0px !important;
+  left: 0px !important;
+  transform: unset !important;
+  width: 100vw;
+  max-height: 80vh;
+  border-radius: 0;
+  display: flex;
+
+  & > div {
+    flex: 1;
+  }
+}
+
 .react-tiny-popover-container {
   z-index: 99999;
   border: 1px solid #ababab52;
@@ -414,6 +428,8 @@
   opacity: 1 !important;
   overflow: hidden !important;
   background-color: var(--react-autoql-background-color-secondary);
+  max-height: 90vh;
+  max-width: 100vw;
 }
 
 .clear-messages-confirm-popover {
