--- a/src/components/SelectableList/SelectableList.scss
+++ b/src/components/SelectableList/SelectableList.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.react-autoql-selectable-list-item-content-container {
+  flex: 1;
+}
+
 .col-visibility-header {
   // padding: 0 20px;
   padding-left: 20px;
